force-app/main/default/objects/PVLSettings__mdt/PVLSettings__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-MV090319 - Created for PVL phase 1</description>
    <label>PVL Settings</label>
    <pluralLabel>PVL Settings</pluralLabel>
</CustomObject>