force-app/main/default/objects/PVLSettings__mdt/fields/ApplicationWizardPageLayoutDefault__c.field-meta.xml
<CustomField>
    <fullName>ApplicationWizardPageLayoutDefault__c</fullName>
    <description>PacPoint-MV091919 - Created for PVL phase 1. To be used in the PVL creation wizard when there is no Application Page Layout populated on the license type</description>
    <label>Application Wizard Page Layout Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>