force-app/main/default/objects/PVLSettings__mdt/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>PacPoint-MV090419 - Created for PVL phase 1</description>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>