force-app/main/default/objects/PVLSettings__mdt/fields/WizardApplicationType__c.field-meta.xml
<CustomField>
    <fullName>WizardApplicationType__c</fullName>
    <defaultValue>&quot;LICN - New License&quot;</defaultValue>
    <description>PacPoint-MV090319 - Created for PVL phase 1</description>
    <inlineHelpText>Use to  default the &quot;Type&quot; field on the application when using the wizard</inlineHelpText>
    <label>Wizard Application Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>